fix/reposted_bug: resolve bugs reported
Following bugs got resolved:
- On Mobile, the hamburger icon at the center looks bad. I would suggest to swap the position of the hamburger icon with the logo
- ~800px, the roadmap image is unreadable. (can this be split up into text/image?)
- Could the roadmap on the homepage be bigger - so the text is larger
- Relevant Patents section has unequal top/bottom margins https://www.dropbox.com/s/1ecis1htp3ique1/Screen%20Shot%202018-04-17%20at%2016.06.29.png?dl=0
- Consider another image for Alpha 4 roadmap - does the 'storage' icon look like coins, or is it ok?

--- a/src/sass/core_dev.sass
+++ b/src/sass/core_dev.sass
@@ -79,8 +79,7 @@
         .rfcs-url
   .patents
     @extend .base
-    margin-top: 80px
-    padding: 60px 0
+    padding: 80px 0
     .patents-b
       @extend .base
       display: block
