--- a/src/sass/laptop/home.sass
+++ b/src/sass/laptop/home.sass
@@ -28,10 +28,21 @@
       min-height: 300px
       .roadmap-b
         .lay-40
+          width: 100%
+          display: block
+          padding: 60px 60px 0
           .dual-tone-text
-            padding-left: 60px
-            padding-top: 80px
+            width: 50%
+            padding-left: 0
+            padding-top: 0
+            text-align: center
+            margin: 0 auto
             p
-              width: 70%
+              width: 100%
+              &:after
+                margin: 60px auto 0
         .lay-60
-          padding: 0 60px 0 20px
+          width: 100%
+          padding: 80px 0
+          display: block
+          background-color: $colr-white
