--- a/src/sass/tablet/home.sass
+++ b/src/sass/tablet/home.sass
@@ -41,14 +41,19 @@
               background-size: 20px
     .roadmap
       .roadmap-b
+        padding-bottom: 0
         .lay-40
           .dual-tone-text
             padding-left: 24px
             padding-top: 60px
+            padding-bottom: 60px
             p
               width: 60%
               margin-top: 24px
               &:after
                 margin-top: 28px
+                display: none
         .lay-60
-          padding: 80px 36px
+          display: none
+        .mob-view
+          display: block
